--- a/imobiliária/style.css
+++ b/imobiliária/style.css
@@ -1,139 +1,203 @@
-*{
-    margin: 0;
-    font-family: Tahoma, sans-serif;
+* {
+  margin: 0;
+  font-family: Tahoma, sans-serif;
 }
 
-body{
-    background-image: url("assets/fundo.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+body {
+  background-image: url("assets/fundo.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.navbar{
-    display: flex;
-    height: 80px;
-    width: 100vw;
-    background-color: #afddfb;
-    padding: 5px;
-    justify-content: space-between;
+.navbar {
+  display: flex;
+  height: 80px;
+  width: 100vw;
+  background-color: #afddfb;
+  padding: 5px;
+  justify-content: space-between;
 
-    img{
-        margin-left: auto;
-        width: 80px;
+  img {
+    margin-left: auto;
+    width: 80px;
+  }
+
+  nav {
+    margin: auto;
+    a {
+      font-size: 20px;
+      text-decoration: none;
+      color: black;
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-top: 40px;
+      padding-bottom: 33px;
     }
-    
-    nav{
-        margin: auto;
-        a{
-            font-size: 20px;
-            text-decoration: none;
-            color: black;
-            padding-left: 20px;
-            padding-right: 20px;
-            padding-top: 40px;
-            padding-bottom: 33px;
-        }
-        a:hover{
-            background-color: #1d80c1;
-        }
+    a:hover {
+      background-color: #1d80c1;
     }
+  }
 }
 
-section{
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.banner {
+  padding: 30px;
+  img {
+    border-radius: 5px;
+  }
+}
+
+.about {
+  padding: 30px;
+  img {
+    width: 300px;
+    border-radius: 5px;
+    padding-right: 30px;
+  }
+  p {
+    text-align: justify;
+    width: 500px;
+
+    span {
+      color: #1d80c1;
+      font-weight: bold;
+    }
+  }
+}
+
+.services {
+  padding: 50px;
+  flex-direction: column;
+  background-color: #1d80c1;
+  color: #ffffff;
+
+  p {
+    padding: 30px;
+    width: 700px;
+    text-align: center;
+    line-height: 30px;
+
+    span {
+      color: #fff81b;
+      font-weight: bold;
+    }
+  }
+
+  ul {
     display: flex;
+    padding: 0;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-}
+    flex-direction: row;
+    gap: 40px;
+    list-style: none;
 
-.banner{
-    padding: 30px;
-    img{
-        border-radius: 5px;
+    li {
+      background-color: rgba(0, 0, 0, 0.473);
+      padding: 10px;
+      border-radius: 5px;
     }
-
-}
-
-.about{
-    padding: 30px;
-    img{
-        width: 300px;
-        border-radius: 5px;
-        padding-right: 30px;
+    li:hover {
+      background-color: #ffffff;
+      color: #1d80c1;
+      cursor: pointer;
     }
-    p{
-        text-align: justify;
-        width: 500px;
-
-        span{
-            color: #1d80c1;
-            font-weight: bold;
-        }
-    }
-
-}
-
-.services{
-    padding: 50px;
-    flex-direction: column;
-    background-color: #1d80c1;
-    color: #ffffff;
-
-    p{
-        padding: 30px;
-        width: 700px;
-        text-align: center;
-        line-height: 30px;
-
-        span{
-            color:#fff81b ;
-            font-weight: bold;
-        }
-    }
-
-    ul{
-        display: flex;
-        padding: 0;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-        gap: 40px;
-        list-style: none;
-
-        li{
-            background-color: rgba(0, 0, 0, 0.473);
-            padding: 10px;
-            border-radius: 5px;
-        }
-        li:hover{
-            background-color: #ffffff;
-            color: #1d80c1;
-            cursor: pointer;
-        }
-    }
-
-
-    
+  }
 }
 
 .brokers {
-    padding: 30px;
-    gap: 30px;
+  padding: 30px;
+  gap: 30px;
+  flex-wrap: wrap;
 }
 
 .brokers img {
-    width: 300px;
-    border-radius: 5px;
+  width: 300px;
+  border-radius: 5px;
 }
 
 .brokers p {
-    text-align: justify;
-    width: 400px;
+  text-align: justify;
+  width: 400px;
 }
 
 .brokers p span {
-    color: #1d80c1;
-    font-weight: bold;
+  color: #1d80c1;
+  font-weight: bold;
 }
 
+.brokers a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #1d80cd; /* Corrigi o valor da cor */
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-align: center;
+    display: inline-block;
+    margin-top: 30px; 
+}
 
+.brokers a:hover {
+  background-color: #155a8a;
+}
+
+footer {
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  background-color: #1d80c1;
+  color: #ffffff;
+  padding: 30px;
+}
+
+footer iframe{
+    display: inline-block;
+    margin: 20px;
+    width: 350px;
+    height: 200px;
+    border-radius: 5px;
+}
+
+footer h1{
+    font-size: 25px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+footer .align{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+    gap: 20px;
+}
+
+footer .align .text-content {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+
+footer .align p{
+    text-align: justify;
+    margin-top: 43px;
+    margin-bottom: 10px;
+}
+
+footer .align a {
+    color: #ffffff;
+    text-decoration: none;
+    margin-top: 10px;
+}
+
+footer a:hover{
+    text-decoration: underline;
+}
